--- a/docker/apps/wekan/docker-compose.yml
+++ b/docker/apps/wekan/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - MAIL_URL=smtps://smtp.gmail.com:465/
       - MAIL_SERVICE=Gmail
       - MAIL_SERVICE_USER=${MAIL_SERVICE_USER}
+      - MAIL_USERNAME=${MAIL_SERVICE_USER}
+      - MAIL_PASSWORD=${MAIL_SERVICE_PASSWORD}
       - MAIL_SERVICE_PASSWORD=${MAIL_SERVICE_PASSWORD}
       - ACCOUNTS_LOCKOUT_KNOWN_USERS_FAILURES_BEFORE=3
       - ACCOUNTS_LOCKOUT_KNOWN_USERS_PERIOD=60
