--- a/docker/apps/wekan/docker-compose.yml
+++ b/docker/apps/wekan/docker-compose.yml
@@ -8,13 +8,13 @@ services:
       - MONGO_URL=mongodb://wekan-db:27017/wekan
       - ROOT_URL=${ROOT_URL} # Replace with your domain or IP
       - PORT=8080
-      #- MAIL_URL=smtp://user:password@smtp.example.com:587/  # Optional: Configure SMTP for email notifications
-      - MAIL_URL=smtp://smtp.gmail.com:465
-      - MAIL_SERVICE=Gmail
-      - MAIL_SERVICE_USER=${MAIL_SERVICE_USER}
-      - MAIL_USERNAME=${MAIL_SERVICE_USER}
-      - MAIL_PASSWORD=${MAIL_SERVICE_PASSWORD}
-      - MAIL_SERVICE_PASSWORD=${MAIL_SERVICE_PASSWORD}
+      - MAIL_URL=${MAIL_URL}
+      #- MAIL_SERVICE=Gmail
+      #- MAIL_SERVICE_USER=${MAIL_SERVICE_USER}
+      #- MAIL_USERNAME=${MAIL_SERVICE_USER}
+      #- MAIL_PASSWORD=${MAIL_SERVICE_PASSWORD}
+      #- MAIL_SERVICE_PASSWORD=${MAIL_SERVICE_PASSWORD}
+      - MAIL_FROM=${MAIL_SERVICE_USER}
       - ACCOUNTS_LOCKOUT_KNOWN_USERS_FAILURES_BEFORE=3
       - ACCOUNTS_LOCKOUT_KNOWN_USERS_PERIOD=60
       - ACCOUNTS_LOCKOUT_KNOWN_USERS_FAILURE_WINDOW=15
