--- a/docker/apps/pastefy/docker-compose.yml
+++ b/docker/apps/pastefy/docker-compose.yml
@@ -63,11 +63,12 @@ services:
       DATABASE_PORT: 3306
       AUTH_PROVIDER: NONE
       SERVER_NAME: ${PAST_SERVER_URL}
-      PASTEFY_LOGIN_REQUIRED: false
-      PASTEFY_LOGIN_REQUIRED_CREATE: true
+      PASTEFY_LOGIN_REQUIRED: true
+      PASTEFY_LOGIN_REQUIRED_CREATE: false
       PASTEFY_LOGIN_REQUIRED_READ: false
       PASTEFY_ENCRYPTION_DEFAULT: false
       PASTEFY_GRANT_ACCESS_REQUIRED: true
       PASTEFY_PUBLIC_STATS: false
+      PASTEFY_LIST_PASTES: false
       OAUTH2_INTERAAPPS_CLIENT_ID: ${OAUTH2_INTERAAPPS_CLIENT_ID}
       OAUTH2_INTERAAPPS_CLIENT_SECRET: ${OAUTH2_INTERAAPPS_CLIENT_SECRET}
