--- a/docker/apps/pastefy/docker-compose.yml
+++ b/docker/apps/pastefy/docker-compose.yml
@@ -62,7 +62,7 @@ services:
       DATABASE_PORT: 3306
       AUTH_PROVIDER: INTERAAPPS
       SERVER_NAME: ${PAST_SERVER_URL}
-      PASTEFY_LOGIN_REQUIRED: false
+      PASTEFY_LOGIN_REQUIRED: true
       PASTEFY_LOGIN_REQUIRED_CREATE: false
       PASTEFY_LOGIN_REQUIRED_READ: false
       PASTEFY_ENCRYPTION_DEFAULT: false
