--- a/docker/apps/pastefy/docker-compose.yml
+++ b/docker/apps/pastefy/docker-compose.yml
@@ -63,8 +63,8 @@ services:
       AUTH_PROVIDER: INTERAAPPS
       SERVER_NAME: ${PAST_SERVER_URL}
       PASTEFY_LOGIN_REQUIRED: true
-      PASTEFY_LOGIN_REQUIRED_CREATE: false
-      PASTEFY_LOGIN_REQUIRED_READ: false
+      PASTEFY_LOGIN_REQUIRED_CREATE: true
+      PASTEFY_LOGIN_REQUIRED_READ: true
       PASTEFY_ENCRYPTION_DEFAULT: false
       PASTEFY_GRANT_ACCESS_REQUIRED: true
       PASTEFY_PUBLIC_STATS: false
