add authentik for pastefy

--- a/docker/apps/pastefy/docker-compose.yml
+++ b/docker/apps/pastefy/docker-compose.yml
@@ -61,7 +61,7 @@ services:
       DATABASE_HOST: db_pastefy
       DATABASE_PORT: 3306
       #AUTH_PROVIDER: INTERAAPPS
-      AUTH_PROVIDER: CUSTOM
+      AUTH_PROVIDER: OIDC
       SERVER_NAME: ${PAST_SERVER_URL}
       PASTEFY_LOGIN_REQUIRED: true
       PASTEFY_LOGIN_REQUIRED_CREATE: true
