revert to pastefy: 7.1.2

--- a/docker/apps/pastefy/docker-compose.yml
+++ b/docker/apps/pastefy/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       - db_pastefy
     security_opt:
       - no-new-privileges:true
-    image: "interaapps/pastefy:latest"
+    image: "interaapps/pastefy:7.1.2"
     container_name: pastefy
     restart: unless-stopped
     volumes:
@@ -60,8 +60,8 @@ services:
       DATABASE_PASSWORD: ${PAST_MYSQL_PASSWORD}
       DATABASE_HOST: db_pastefy
       DATABASE_PORT: 3306
-      #AUTH_PROVIDER: INTERAAPPS
-      AUTH_PROVIDER: OIDC
+      AUTH_PROVIDER: INTERAAPPS
+      #AUTH_PROVIDER: OIDC
       SERVER_NAME: ${PAST_SERVER_URL}
       PASTEFY_LOGIN_REQUIRED: true
       PASTEFY_LOGIN_REQUIRED_CREATE: true
@@ -70,10 +70,10 @@ services:
       PASTEFY_GRANT_ACCESS_REQUIRED: true
       PASTEFY_PUBLIC_STATS: false
       PASTEFY_LIST_PASTES: false
-      #OAUTH2_INTERAAPPS_CLIENT_ID: ${OAUTH2_INTERAAPPS_CLIENT_ID}
-      #OAUTH2_INTERAAPPS_CLIENT_SECRET: ${OAUTH2_INTERAAPPS_CLIENT_SECRET}
-      OAUTH2_OIDC_CLIENT_ID: ${OIDC_CLIENT_ID}
-      OAUTH2_OIDC_CLIENT_SECRET: ${OIDC_CLIENT_SECRET}
-      OAUTH2_OIDC_AUTH_ENDPOINT: ${OIDC_AUTH_ENDPOINT}
-      OAUTH2_OIDC_TOKEN_ENDPOINT: ${OIDC_TOKEN_ENDPOINT}
-      OAUTH2_OIDC_USERINFO_ENDPOINT: ${OIDC_USERINFO_ENDPOINT}
+      OAUTH2_INTERAAPPS_CLIENT_ID: ${OAUTH2_INTERAAPPS_CLIENT_ID}
+      OAUTH2_INTERAAPPS_CLIENT_SECRET: ${OAUTH2_INTERAAPPS_CLIENT_SECRET}
+      #OAUTH2_OIDC_CLIENT_ID: ${OIDC_CLIENT_ID}
+      #OAUTH2_OIDC_CLIENT_SECRET: ${OIDC_CLIENT_SECRET}
+      #OAUTH2_OIDC_AUTH_ENDPOINT: ${OIDC_AUTH_ENDPOINT}
+      #OAUTH2_OIDC_TOKEN_ENDPOINT: ${OIDC_TOKEN_ENDPOINT}
+      #OAUTH2_OIDC_USERINFO_ENDPOINT: ${OIDC_USERINFO_ENDPOINT}
