--- a/docker/media-stream/docker-compose.yml
+++ b/docker/media-stream/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.9'
 services:
   # Indexer
   jackett:
@@ -206,6 +205,21 @@ services:
       - /nfs/stream_data/downloads:/data/downloads
     networks:
       - media-net
+  jellyfin:
+    image: jellyfin/jellyfin
+    container_name: jellyfin
+    runtime: nvidia
+    environment:
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=all
+    ports:
+      - 8096:8096
+    volumes:
+      - /opt/data-docker/media_stream/jellyfin/config:/config
+      - /opt/data-docker/media_stream/jellyfin/cache:/cache
+      - /nfs/stream_data:/media
+    restart: unless-stopped
+
 networks:
   media-net:
     external: true
