--- a/docker/authentik/docker-compose.yml
+++ b/docker/authentik/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       retries: 5
       timeout: 3s
     volumes:
-      - /opt/data-docker/authentik/redis:/data
+      - authentik_redis_data:/data
       - "/etc/timezone:/etc/timezone:ro"
       - "/etc/localtime:/etc/localtime:ro"
     labels:
@@ -131,6 +131,8 @@ services:
       - frontend-network
       - backend-network
 
+volumes:
+  authentik_redis_data:
 networks:
   frontend-network:
     driver: bridge
