--- a/docker/apps/ollama/docker-compose.yml
+++ b/docker/apps/ollama/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     environment:
       - OLLAMA_BASE_URL=http://ollama:11434
       - WEBUI_SECRET_KEY=${WEBUI_SECRET_KEY}
-      - ENABLE_SIGNUP=false
+      - ENABLE_SIGNUP=${WEBUI_ENABLE_SIGNUP}
       - DEFAULT_MODELS=codellama,llama3.1
     depends_on:
       - ollama
