--- a/docker/apps/ollama/docker-compose.yml
+++ b/docker/apps/ollama/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     environment:
       - OLLAMA_HOST=0.0.0.0
       - OLLAMA_MODELS=/root/.ollama/models
+      - OLLAMA_CUDA_ENABLED=1
     restart: unless-stopped
     deploy:
       resources:
