--- a/docker/apps/duplicati/docker-compose.yml
+++ b/docker/apps/duplicati/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     volumes:
       - "/opt/data-docker/duplicati/config:/config"
       - "${PBS_DISK_PATH}:/pbs_data"
+      - "/opt/rclone/1.70.3:/opt/rclone"
     ports:
       - "8101:8200"
     restart: unless-stopped
