--- a/docker/apps/duplicati/docker-compose.yml
+++ b/docker/apps/duplicati/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - "/opt/data-docker/duplicati/config:/config"
       - "${PBS_DISK_PATH}:/pbs_data"
-      - "${ZFSA_PATH}:/zfsa_data"
+      - "${ZFSA_ABZ_DOC_PATH}:/zfsa_documents"
       - "/opt/rclone/1.70.3:/opt/rclone"
     ports:
       - "8101:8200"
