--- a/docker/apps/immich/v1.140.1/example.env
+++ b/docker/apps/immich/v1.140.1/example.env
@@ -10,7 +10,7 @@ DB_DATA_LOCATION=./postgres
 # TZ=Etc/UTC
 
 # The Immich version to use. You can pin this to a specific version like "v1.71.0"
-IMMICH_VERSION=release
+IMMICH_VERSION=v1.140.1
 
 # Connection secret for postgres. You should change it to a random password
 # Please use only the characters `A-Za-z0-9`, without special characters or spaces
