--- a/docker/apps/immich/v1.140.1/docker-compose.yml
+++ b/docker/apps/immich/v1.140.1/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     volumes:
       # Do not edit the next line. If you want to change the media storage location on your system, edit the value of UPLOAD_LOCATION in the .env file
       - ${UPLOAD_LOCATION}:/data
+      - ${EXTERNAL_PATH}:/external-data
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
     env_file:
@@ -61,6 +62,7 @@ services:
     volumes:
       # Do not edit the next line. If you want to change the database storage location on your system, edit the value of DB_DATA_LOCATION in the .env file
       - ${DB_DATA_LOCATION}:/var/lib/postgresql/data
+      - /opt/data-docker/immich/db-backups:/db-backups
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
     shm_size: 128mb
