--- a/docker/apps/convertx/docker-compose.yml
+++ b/docker/apps/convertx/docker-compose.yml
@@ -14,3 +14,6 @@ services:
       - "/etc/localtime:/etc/localtime:ro"
       - "/etc/timezone:/etc/timezone:ro"
       - "/opt/data-docker/convertx/data:/app/data"
+    labels:
+      - "docker-volume-backup.stop-during-backup=true"
+      - "com.centurylinklabs.watchtower.scope=toUpdateScope"
