--- a/docker/apps/pastefy/docker-compose.yml
+++ b/docker/apps/pastefy/docker-compose.yml
@@ -70,6 +70,7 @@ services:
       PASTEFY_GRANT_ACCESS_REQUIRED: true
       PASTEFY_PUBLIC_STATS: false
       PASTEFY_LIST_PASTES: false
+      PASTEFY_AUTOMIGRATE: false
       #OAUTH2_INTERAAPPS_CLIENT_ID: ${OAUTH2_INTERAAPPS_CLIENT_ID}
       #OAUTH2_INTERAAPPS_CLIENT_SECRET: ${OAUTH2_INTERAAPPS_CLIENT_SECRET}
       OAUTH2_OIDC_CLIENT_ID: ${OIDC_CLIENT_ID}
