--- a/docker/apps/syncthing/docker-compose.yml
+++ b/docker/apps/syncthing/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   syncthing:
-    image: ghcr.io/linuxserver/syncthing
+    image: lscr.io/linuxserver/syncthing:latest
     container_name: syncthing
     labels:
       - "com.centurylinklabs.watchtower.scope=toUpdateScope"
