--- a/docker/apps/syncthing/docker-compose.yml
+++ b/docker/apps/syncthing/docker-compose.yml
@@ -7,9 +7,11 @@ services:
       - "docker-volume-backup.stop-during-backup=true"
     hostname: gerrard
     environment:
-      - PUID=1000
+      - PUID=1001
       - PGID=1001
       - TZ=America/Montreal
+    env_file:
+      - /opt/data-docker/immich/config/run.env
     volumes:
       - /opt/data-docker/syncthing/config:/config
       - /opt/data-docker/immich/upload:/data/fast/upload
