--- a/docker/apps/minio/docker-compose.yml
+++ b/docker/apps/minio/docker-compose.yml
@@ -5,7 +5,7 @@
 services:
   minio:
     container_name: minio
-    image: minio/minio:RELEASE.2025-09-07T16-13-09Z-cpuv1
+    image: minio/minio:RELEASE.2025-09-07T16-13-09Z
     restart: unless-stopped
     ports:
       - "9000:9000"  # S3 API port
@@ -13,8 +13,8 @@ services:
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
-      MINIO_BROWSER_REDIRECT_URL: ${MINIO_BROWSER_REDIRECT_URL}
-      MINIO_SERVER_URL: ${MINIO_SERVER_URL}
+      #MINIO_BROWSER_REDIRECT_URL: ${MINIO_BROWSER_REDIRECT_URL}
+      #MINIO_SERVER_URL: ${MINIO_SERVER_URL}
     command: server /data --console-address ":9001"
     volumes:
       - "${S3_DISK_PATH}:/data"
