--- a/docker/apps/minio/docker-compose.yml
+++ b/docker/apps/minio/docker-compose.yml
@@ -5,7 +5,7 @@
 services:
   minio:
     container_name: minio
-    image: quay.io/minio/minio:latest
+    image: minio/minio:RELEASE.2025-04-22T22-12-26Z
     restart: unless-stopped
     ports:
       - "9000:9000"  # S3 API port
