--- a/docker/homepage/homepage-tools/docker-compose.yml
+++ b/docker/homepage/homepage-tools/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     # Replace with the actual published image name once available:
     # image: ghcr.io/aicodebitsbeyond/homepage-editor:latest
     # For local builds (if you cloned the repository):
-    image: ghcr.io/aicodebitsbeyond/homepage-editor:latest
+    image: docker.io/library/homepageeditor:latest
     container_name: homepage-editor
     ports:
       - "3001:3000" # Host port 3001 mapped to container port 3000
